// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumbs.vue > renders the current folder under the root 1`] = `
<ul data-v-a48b9e35="" class="text-base">
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse" class="text-k-fg-70 font-normal">Library</a></li>
  <li data-v-a48b9e35="" class="inline-block"><span data-v-a48b9e35="">Music</span></li>
</ul>
`;

exports[`breadcrumbs.vue > renders the full ancestor chain when within the limit 1`] = `
<ul data-v-a48b9e35="" class="text-base">
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse" class="text-k-fg-70 font-normal">Library</a></li>
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse/a1" class="text-k-fg-70 font-normal">Music</a></li>
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse/a2" class="text-k-fg-70 font-normal">Rock</a></li>
  <li data-v-a48b9e35="" class="inline-block"><span data-v-a48b9e35="">Pink Floyd</span></li>
</ul>
`;

exports[`breadcrumbs.vue > renders the library root only 1`] = `
<ul data-v-a48b9e35="" class="text-base">
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse" class="text-k-fg-70 font-normal">Library</a></li>
</ul>
`;

exports[`breadcrumbs.vue > truncates the middle when the chain is deep 1`] = `
<ul data-v-a48b9e35="" class="text-base">
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse" class="text-k-fg-70 font-normal">Library</a></li>
  <li data-v-a48b9e35="" class="inline-block"><span data-v-a48b9e35="">…</span></li>
  <li data-v-a48b9e35="" class="inline-block"><a data-v-a48b9e35="" href="/#/browse/a4" class="text-k-fg-70 font-normal">Pink Floyd</a></li>
  <li data-v-a48b9e35="" class="inline-block"><span data-v-a48b9e35="">The Wall</span></li>
</ul>
`;
